Final Code with export feature

--- a/Components/Pages/DebtPage.razor
+++ b/Components/Pages/DebtPage.razor
@@ -27,10 +27,11 @@
     }
 
     .dropdown {
-        padding: 5px;
-        border-radius: 4px;
+        padding: 3px;
+        border-radius: 3px;
         border: 1px solid #ccc;
         font-size: 1rem;
+
     }
 
     .right-box {
@@ -79,6 +80,7 @@
     table {
         width: 100%;
         border-collapse: collapse;
+        margin-top:15px;
     }
 
         table th,
